--- a/index.html
+++ b/index.html
@@ -11828,8 +11828,6 @@ textarea {
             <div class="team-grid KeyNotesContainer">
                 <div class="intro flex flex-col align-middle text-center">
                 <h2 class="section-heading text-uppercase">Aim & Scope</h2>
-            </div>
-            </div>
             <div style="height: 2rem;"></div>
             <div class="text-center">
                 <p class="section-subheading Home text-muted" >
@@ -11868,6 +11866,8 @@ textarea {
                         </li> 
                     </ul>
                 </p>
+            </div>
+                </div>
             </div>
             <!-- 
                 <div class="col-md-12 text-center-asli-wala">
@@ -12583,35 +12583,47 @@ textarea {
 -->
     <section class="page-section" id="contact">
         <div class="container">
-            <div class="text-center">
-                <h2 class="section-heading text-uppercase">Contact Us</h2>
-                <h3 class="section-subheading text-muted">arijit@iitg.ac.in </h3>
-            </div>
+            <div class="team-grid KeyNotesContainer">
+                <div class="intro flex flex-col align-middle text-center">
+                    <div class="text-center">
+                        <h2 class="section-heading text-uppercase">Contact Us</h2>
+                    </div>
 
-            <div class="  row bg-gray-100 p-8">
-                <div class="col-md-6">
-                    <h2 class="text-2xl text-white mb-4">Venue</h2>
-                    <p class="text-white">Department of Computer Science and Engineering,<br> H-Block Academic Complex, <br> Indian Institute of Technology Guwahati. Guwahati - 781039</p>
-                    <a class="text-blue-500 hover:text-blue-700" href="https://maps.app.goo.gl/hgp16sEPhK9k8XCG8">View on Map</a>
+                    <div class="  row bg-gray-100 p-8">
+                        <div class="col-md-6">
+                            <h2 class="text-2xl text-white mb-4">Venue</h2>
+                            <p class="text-white">
+                                Department of Computer Science and Engineering,<br> 
+                                H-Block Academic Complex, <br> 
+                                Indian Institute of Technology Guwahati. Guwahati - 781039<br> 
+                                <a class="hover:text-blue-700" href="https://maps.app.goo.gl/hgp16sEPhK9k8XCG8">View on Map</a>
+                            </p>
+                        </div>
+                        <div class="col-md-6">
+                            <h2 class="text-2xl text-white mb-4">Coordinators</h2>
+                            <p class="text-white">
+                                Mr. Suklav Ghosh (+91-9678000387)
+                                Dr. Sampriti Soor (+91-6297669108)
+                                Prof. Arijit Sur (+91-9678000387)
+                            </p>
+                        </div>
+                        <div class="col-md-6 queryForm">
+                            <h2 class="text-white KeynoteP">Questions?</h2>
+                            <form class="row" action="mailto:suklav@iiitg.ac.in
+                            " method="post" enctype="text/plain">
+                                <input type="text" placeholder="Name"
+                                    class=" col-md-12 inline-block w-full rounded-md py-2 px-4 mb-2" />
+                                <input type="email" placeholder="Email" class=" block w-full rounded-md py-2 px-4 mb-2" />
+                                <textarea placeholder="Message" rows="4"
+                                    class="block w-full rounded-md py-2 px-4 mb-2"></textarea>
+                                <button type="submit"
+                                    class="bg-blue-500 hover:bg-blue-700 text-white py-2 px-4 rounded-md">Send</button>
+                            </form>
+                        </div>
+                    </div>
+                    
                 </div>
-                <div class="col-md-6 queryForm">
-                    <h2 class="text-white KeynoteP">Questions?</h2>
-                    <form class="row" action="mailto:aiss@iiitd.ac.in
-                    " method="post" enctype="text/plain">
-                        <input type="text" placeholder="Name"
-                            class=" col-md-12 inline-block w-full rounded-md py-2 px-4 mb-2" />
-                        <input type="email" placeholder="Email" class=" block w-full rounded-md py-2 px-4 mb-2" />
-                        <textarea placeholder="Message" rows="4"
-                            class="block w-full rounded-md py-2 px-4 mb-2"></textarea>
-                        <button type="submit"
-                            class="bg-blue-500 hover:bg-blue-700 text-white py-2 px-4 rounded-md">Send</button>
-                    </form>
-                </div>
-
-
             </div>
-        </div>
-
         </div>
     </section>
     <!-- Footer-->
@@ -12630,10 +12642,10 @@ textarea {
                     <a class="btn btn-dark btn-social mx-2" href="https://www.instagram.com/iiitdcai/"
                         aria-label="Instagram"><i class="fab fa-instagram"></i></a>
                 </div>
-                <!-- <div class="col-lg-4 text-lg-end">
+                <div class="col-lg-4 text-lg-end">
                         <a class="link-dark text-decoration-none me-3" href="#!">Privacy Policy</a>
                         <a class="link-dark text-decoration-none" href="#!">Terms of Use</a>
-                    </div> -->
+                    </div>
             </div>
         </div>
     </footer>
