--- a/index.html
+++ b/index.html
@@ -11731,6 +11731,7 @@ textarea {
                     <li class="nav-item"><a class="nav-link" href="#program">Programme Schedule</a></li>
                     <!-- <li class="nav-item"><a class="nav-link" href="#grants">Student Grants</a></li> -->
                     <!-- <li class="nav-item"><a class="nav-link" href="#Submission">Submission</a></li> -->
+                    <li class="nav-item"><a class="nav-link" href="#accomodation">Accomodation</a></li>
                     <li class="nav-item"><a class="nav-link" href="#sponsors">Sponsors</a></li>
                     <li class="nav-item"><a class="nav-link" href="#contact">Contact Us</a></li>
                 </ul>
@@ -12327,7 +12328,25 @@ textarea {
         </div>
     </section>
      -->
-
+<section id="accomodation" class="bg-light">
+        <div class="container">
+            <div class="team-grid KeyNotesContainer">
+                <div class="intro flex flex-col align-middle text-center">
+                <h2 class="section-heading text-uppercase">Accomodation</h2>
+                <div style="height: 2rem;"></div>
+                <div class="text-center">
+                    <p class="section-subheading Home text-muted" >
+                        A limited number of rooms in the institute hostels are reserved for the participants.
+                        This is a low-cost option and is available on first-come-first-served basis. 
+                        A participant will directly pay their accommodation cost to the hostel. 
+                        Other options for accommodation are the guest house of the institute and the hotels close to the institute. 
+                        Please contact us to book a hostel room or if you need support for other accommodation options. 
+                        Payment for the accommodation will be made directly on spot.
+                    </p>
+                </div>
+                </div>
+            </div>
+    </section>
 
     <!-- register-->
     <section class="page-section" id="register">
@@ -12338,29 +12357,6 @@ textarea {
                     width="550" height="550" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 
             </div>
-        </div>
-        <div class="container">
-            <div class="team-grid">
-                <div class="intro">
-                    <h3 class="text-center-asli-wala">Accommodation</h3>
-                    <div class="text-center">
-                        <div class="text-justify">
-                            <p class="text-muted">
-                                A limited number of rooms in the institute hostels are reserved for the participants.
-                                This is a low-cost option and is available on first-come-first-served basis. A
-                                participant will directly pay their accommodation cost to the hostel. Other options for
-                                accommodation are the guest house of the institute and the hotels close to the
-                                institute. Please contact us to book a hostel room or if you need support for other
-                                accommodation options. Payment for the accommodation will be made directly on spot.
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3   item">
-                </div>
-            </div>
-        </div>
-        </div>
         </div>
         <div class="container">
             <!-- <div class="team-grid">
@@ -12589,20 +12585,18 @@ textarea {
 
                     <div class="  row bg-gray-100 p-8">
                         <div class="col-md-6">
+                            <h2 class="text-2xl text-white mb-4">Coordinators</h2>
+                            <p class="text-white">
+                                Mr. Suklav Ghosh (+91-9678000387)<br>
+                                Dr. Sampriti Soor (+91-6297669108)<br>
+                                Prof. Arijit Sur (+91-9678000387)<br>
+                            </p><br>
                             <h2 class="text-2xl text-white mb-4">Venue</h2>
                             <p class="text-white">
                                 Department of Computer Science and Engineering,<br> 
                                 H-Block Academic Complex, <br> 
                                 Indian Institute of Technology Guwahati. Guwahati - 781039<br> 
-                                <a class="hover:text-blue-700" href="https://maps.app.goo.gl/hgp16sEPhK9k8XCG8">View on Map</a>
-                            </p>
-                        </div>
-                        <div class="col-md-6">
-                            <h2 class="text-2xl text-white mb-4">Coordinators</h2>
-                            <p class="text-white">
-                                Mr. Suklav Ghosh (+91-9678000387)
-                                Dr. Sampriti Soor (+91-6297669108)
-                                Prof. Arijit Sur (+91-9678000387)
+                                <a class="text-white hover:text-blue-700" href="https://maps.app.goo.gl/hgp16sEPhK9k8XCG8">View on Map</a>
                             </p>
                         </div>
                         <div class="col-md-6 queryForm">
