--- a/index.html
+++ b/index.html
@@ -11868,6 +11868,7 @@ textarea {
                     </ul>
                 </p>
             </div>
+                <div style="height: 2rem;"></div>
                 </div>
             </div>
             <!-- 
@@ -12344,6 +12345,7 @@ textarea {
                         Payment for the accommodation will be made directly on spot.
                     </p>
                 </div>
+                <div style="height: 2rem;"></div>
                 </div>
             </div>
     </section>
