--- a/index.html
+++ b/index.html
@@ -11692,6 +11692,38 @@ textarea {
   color: orange;
 
 }
+
+
+
+table {
+    width: 1000px;
+    margin: 12px auto 24px auto;
+    float: center;
+    /* UNCOMMENT THIS FOR DEBUGGING THE ALIGNMENT */
+    /*border: 1px solid black;*/
+}
+
+th,
+td {
+    text-align: left;
+    /* UNCOMMENT THIS FOR DEBUGGING THE ALIGNMENT */
+    /*border: 1px solid black;*/
+}
+
+.ScheduleBanner {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 2rem;
+    padding-bottom: 1rem;
+}
+
+/* Website Banner */
+.banner {
+    position: relative;
+    font-family: 'Roboto Slab', serif;
+}
+        
 .register-button {
   /* Linear gradient from top (#ff0000) to bottom (#0000ff) */
   background: linear-gradient(to bottom, #5D0089 0%, #00326D 100%);
@@ -12338,9 +12370,9 @@ textarea {
     </section>
 
     <section id="sponsors" class="bg-light">
-    <div class="container">
-        <div class="team-grid">
-            <div class="container">
+        <div class="container">
+            <div class="team-grid KeyNotesContainer">
+                <div class="intro flex flex-col align-middle text-center">
                 <div class="intro">
                     <h2 class="text-center-asli-wala">Sponsors</h2>
                 </div>
