--- a/index.html
+++ b/index.html
@@ -12341,7 +12341,836 @@ td {
             </div>
             <div class="text-center">
                 <div class="container">
-                    
+                    <div class="ScheduleBanner">
+    <h4>6th January (Monday), 2025</h4>
+</div>
+
+<table>
+    <tr>
+        <td class="date" rowspan="2">
+            9:00 - 10:00 AM
+        </td>
+        <td class="title">
+            Expert Lecture
+        </td>
+    </tr>
+    <tr>
+        <td class="abstract"></td>
+    </tr>
+</table>
+
+<table>
+    <tr>
+        <td class="date" rowspan="2">
+            10:00 - 11:00 AM
+        </td>
+        <td class="title">
+            Inauguration
+        </td>
+    </tr>
+    <tr>
+        <td class="abstract"></td>
+    </tr>
+</table>
+
+<table>
+    <tr>
+        <td class="date" rowspan="2">
+            11:00 - 11:30 AM
+        </td>
+        <td class="title">
+            High Tea
+        </td>
+    </tr>
+    <tr>
+        <td class="abstract"></td>
+    </tr>
+</table>
+
+<table>
+    <tr>
+        <td class="date" rowspan="2">
+            11:30 AM - 12:30 PM
+        </td>
+        <td class="title">
+            ML Basics
+        </td>
+    </tr>
+    <tr>
+        <td class="abstract"></td>
+    </tr>
+</table>
+
+<table>
+    <tr>
+        <td class="date" rowspan="2">
+            12:30 - 1:30 PM
+        </td>
+        <td class="title">
+            ML Basics
+        </td>
+    </tr>
+    <tr>
+        <td class="abstract"></td>
+    </tr>
+</table>
+
+<table>
+    <tr>
+        <td class="date" rowspan="2">
+            1:30 - 3:00 PM
+        </td>
+        <td class="title">
+            Lunch
+        </td>
+    </tr>
+    <tr>
+        <td class="abstract"></td>
+    </tr>
+</table>
+
+<table>
+    <tr>
+        <td class="date" rowspan="2">
+            3:00 - 5:00 PM
+        </td>
+        <td class="title">
+            Hands-on
+        </td>
+    </tr>
+    <tr>
+        <td class="abstract"></td>
+    </tr>
+</table>
+
+<!-- Repeat the same structure for 7th, 8th, 9th, 10th, 11th, 12th, and 13th January -->
+
+<div class="ScheduleBanner">
+    <h4>7th January (Tuesday), 2025</h4>
+</div>
+
+<table>
+    <tr>
+        <td class="date" rowspan="2">
+            9:00 - 10:00 AM
+        </td>
+        <td class="title">
+            Expert Lecture
+        </td>
+    </tr>
+    <tr>
+        <td class="abstract"></td>
+    </tr>
+</table>
+
+<table>
+    <tr>
+        <td class="date" rowspan="2">
+            10:00 - 11:00 AM
+        </td>
+        <td class="title">
+            DL Basics
+        </td>
+    </tr>
+    <tr>
+        <td class="abstract"></td>
+    </tr>
+</table>
+
+<table>
+    <tr>
+        <td class="date" rowspan="2">
+            11:00 - 11:30 AM
+        </td>
+        <td class="title">
+            High Tea
+        </td>
+    </tr>
+    <tr>
+        <td class="abstract"></td>
+    </tr>
+</table>
+
+<table>
+    <tr>
+        <td class="date" rowspan="2">
+            11:30 AM - 12:30 PM
+        </td>
+        <td class="title">
+            CNN - I
+        </td>
+    </tr>
+    <tr>
+        <td class="abstract"></td>
+    </tr>
+</table>
+
+<table>
+    <tr>
+        <td class="date" rowspan="2">
+            12:30 - 1:30 PM
+        </td>
+        <td class="title">
+            CNN - II
+        </td>
+    </tr>
+    <tr>
+        <td class="abstract"></td>
+    </tr>
+</table>
+
+<table>
+    <tr>
+        <td class="date" rowspan="2">
+            1:30 - 3:00 PM
+        </td>
+        <td class="title">
+            Lunch
+        </td>
+    </tr>
+    <tr>
+        <td class="abstract"></td>
+    </tr>
+</table>
+
+<table>
+    <tr>
+        <td class="date" rowspan="2">
+            3:00 - 5:00 PM
+        </td>
+        <td class="title">
+            Hands-on
+        </td>
+    </tr>
+    <tr>
+        <td class="abstract"></td>
+    </tr>
+</table>
+
+<!-- Continue for 8th to 13th January, following the same structure -->
+
+<div class="ScheduleBanner">
+    <h4>8th January (Wednesday), 2025</h4>
+</div>
+
+<table>
+    <tr>
+        <td class="date" rowspan="2">
+            9:00 - 10:00 AM
+        </td>
+        <td class="title">
+            Expert Lecture
+        </td>
+    </tr>
+    <tr>
+        <td class="abstract"></td>
+    </tr>
+</table>
+
+<table>
+    <tr>
+        <td class="date" rowspan="2">
+            10:00 - 11:00 AM
+        </td>
+        <td class="title">
+            Sequential Modelling - I
+        </td>
+    </tr>
+    <tr>
+        <td class="abstract"></td>
+    </tr>
+</table>
+
+<table>
+    <tr>
+        <td class="date" rowspan="2">
+            11:00 - 11:30 AM
+        </td>
+        <td class="title">
+            High Tea
+        </td>
+    </tr>
+    <tr>
+        <td class="abstract"></td>
+    </tr>
+</table>
+
+<table>
+    <tr>
+        <td class="date" rowspan="2">
+            11:30 AM - 12:30 PM
+        </td>
+        <td class="title">
+            Sequential Modelling - II
+        </td>
+    </tr>
+    <tr>
+        <td class="abstract"></td>
+    </tr>
+</table>
+
+<table>
+    <tr>
+        <td class="date" rowspan="2">
+            12:30 - 1:30 PM
+        </td>
+        <td class="title">
+            Sequential Modelling - III
+        </td>
+    </tr>
+    <tr>
+        <td class="abstract"></td>
+    </tr>
+</table>
+
+<table>
+    <tr>
+        <td class="date" rowspan="2">
+            1:30 - 3:00 PM
+        </td>
+        <td class="title">
+            Lunch
+        </td>
+    </tr>
+    <tr>
+        <td class="abstract"></td>
+    </tr>
+</table>
+
+<table>
+    <tr>
+        <td class="date" rowspan="2">
+            3:00 - 5:00 PM
+        </td>
+        <td class="title">
+            Hands-on
+        </td>
+    </tr>
+    <tr>
+        <td class="abstract"></td>
+    </tr>
+</table>
+
+<!-- Repeat this structure for all other days (9th to 13th January) -->
+<!-- 9th January (Thursday) -->
+
+<div class="ScheduleBanner">
+    <h4>9th January (Thursday), 2025</h4>
+</div>
+
+<table>
+    <tr>
+        <td class="date" rowspan="2">
+            9:00 - 10:00 AM
+        </td>
+        <td class="title">
+            Expert Lecture
+        </td>
+    </tr>
+    <tr>
+        <td class="abstract"></td>
+    </tr>
+</table>
+
+<table>
+    <tr>
+        <td class="date" rowspan="2">
+            10:00 - 11:00 AM
+        </td>
+        <td class="title">
+            DL for Vision - I
+        </td>
+    </tr>
+    <tr>
+        <td class="abstract"></td>
+    </tr>
+</table>
+
+<table>
+    <tr>
+        <td class="date" rowspan="2">
+            11:00 - 11:30 AM
+        </td>
+        <td class="title">
+            High Tea
+        </td>
+    </tr>
+    <tr>
+        <td class="abstract"></td>
+    </tr>
+</table>
+
+<table>
+    <tr>
+        <td class="date" rowspan="2">
+            11:30 AM - 12:30 PM
+        </td>
+        <td class="title">
+            DL for Vision - II
+        </td>
+    </tr>
+    <tr>
+        <td class="abstract"></td>
+    </tr>
+</table>
+
+<table>
+    <tr>
+        <td class="date" rowspan="2">
+            12:30 - 1:30 PM
+        </td>
+        <td class="title">
+            DL for Vision - III
+        </td>
+    </tr>
+    <tr>
+        <td class="abstract"></td>
+    </tr>
+</table>
+
+<table>
+    <tr>
+        <td class="date" rowspan="2">
+            1:30 - 3:00 PM
+        </td>
+        <td class="title">
+            Lunch
+        </td>
+    </tr>
+    <tr>
+        <td class="abstract"></td>
+    </tr>
+</table>
+
+<table>
+    <tr>
+        <td class="date" rowspan="2">
+            3:00 - 5:00 PM
+        </td>
+        <td class="title">
+            Hands-on
+        </td>
+    </tr>
+    <tr>
+        <td class="abstract"></td>
+    </tr>
+</table>
+
+<!-- 10th January (Friday) -->
+
+<div class="ScheduleBanner">
+    <h4>10th January (Friday), 2025</h4>
+</div>
+
+<table>
+    <tr>
+        <td class="date" rowspan="2">
+            9:00 - 10:00 AM
+        </td>
+        <td class="title">
+            Expert Lecture
+        </td>
+    </tr>
+    <tr>
+        <td class="abstract"></td>
+    </tr>
+</table>
+
+<table>
+    <tr>
+        <td class="date" rowspan="2">
+            10:00 - 11:00 AM
+        </td>
+        <td class="title">
+            DL for NLP - I
+        </td>
+    </tr>
+    <tr>
+        <td class="abstract"></td>
+    </tr>
+</table>
+
+<table>
+    <tr>
+        <td class="date" rowspan="2">
+            11:00 - 11:30 AM
+        </td>
+        <td class="title">
+            High Tea
+        </td>
+    </tr>
+    <tr>
+        <td class="abstract"></td>
+    </tr>
+</table>
+
+<table>
+    <tr>
+        <td class="date" rowspan="2">
+            11:30 AM - 12:30 PM
+        </td>
+        <td class="title">
+            DL for NLP - II
+        </td>
+    </tr>
+    <tr>
+        <td class="abstract"></td>
+    </tr>
+</table>
+
+<table>
+    <tr>
+        <td class="date" rowspan="2">
+            12:30 - 1:30 PM
+        </td>
+        <td class="title">
+            DL for NLP - III
+        </td>
+    </tr>
+    <tr>
+        <td class="abstract"></td>
+    </tr>
+</table>
+
+<table>
+    <tr>
+        <td class="date" rowspan="2">
+            1:30 - 3:00 PM
+        </td>
+        <td class="title">
+            Lunch
+        </td>
+    </tr>
+    <tr>
+        <td class="abstract"></td>
+    </tr>
+</table>
+
+<table>
+    <tr>
+        <td class="date" rowspan="2">
+            3:00 - 5:00 PM
+        </td>
+        <td class="title">
+            Hands-on
+        </td>
+    </tr>
+    <tr>
+        <td class="abstract"></td>
+    </tr>
+</table>
+
+<!-- 11th January (Saturday) -->
+
+<div class="ScheduleBanner">
+    <h4>11th January (Saturday), 2025</h4>
+</div>
+
+<table>
+    <tr>
+        <td class="date" rowspan="2">
+            9:00 - 10:00 AM
+        </td>
+        <td class="title">
+            Expert Lecture
+        </td>
+    </tr>
+    <tr>
+        <td class="abstract"></td>
+    </tr>
+</table>
+
+<table>
+    <tr>
+        <td class="date" rowspan="2">
+            10:00 - 11:00 AM
+        </td>
+        <td class="title">
+            Generative AI - I
+        </td>
+    </tr>
+    <tr>
+        <td class="abstract"></td>
+    </tr>
+</table>
+
+<table>
+    <tr>
+        <td class="date" rowspan="2">
+            11:00 - 11:30 AM
+        </td>
+        <td class="title">
+            High Tea
+        </td>
+    </tr>
+    <tr>
+        <td class="abstract"></td>
+    </tr>
+</table>
+
+<table>
+    <tr>
+        <td class="date" rowspan="2">
+            11:30 AM - 12:30 PM
+        </td>
+        <td class="title">
+            Generative AI - II
+        </td>
+    </tr>
+    <tr>
+        <td class="abstract"></td>
+    </tr>
+</table>
+
+<table>
+    <tr>
+        <td class="date" rowspan="2">
+            12:30 - 1:30 PM
+        </td>
+        <td class="title">
+            Generative AI - III
+        </td>
+    </tr>
+    <tr>
+        <td class="abstract"></td>
+    </tr>
+</table>
+
+<table>
+    <tr>
+        <td class="date" rowspan="2">
+            1:30 - 3:00 PM
+        </td>
+        <td class="title">
+            Lunch
+        </td>
+    </tr>
+    <tr>
+        <td class="abstract"></td>
+    </tr>
+</table>
+
+<table>
+    <tr>
+        <td class="date" rowspan="2">
+            3:00 - 5:00 PM
+        </td>
+        <td class="title">
+            Hands-on
+        </td>
+    </tr>
+    <tr>
+        <td class="abstract"></td>
+    </tr>
+</table>
+
+<!-- 12th January (Sunday) -->
+
+<div class="ScheduleBanner">
+    <h4>12th January (Sunday), 2025</h4>
+</div>
+
+<table>
+    <tr>
+        <td class="date" rowspan="2">
+            9:00 - 10:00 AM
+        </td>
+        <td class="title">
+            Expert Lecture
+        </td>
+    </tr>
+    <tr>
+        <td class="abstract"></td>
+    </tr>
+</table>
+
+<table>
+    <tr>
+        <td class="date" rowspan="2">
+            10:00 - 11:00 AM
+        </td>
+        <td class="title">
+            DL for Network
+        </td>
+    </tr>
+    <tr>
+        <td class="abstract"></td>
+    </tr>
+</table>
+
+<table>
+    <tr>
+        <td class="date" rowspan="2">
+            11:00 - 11:30 AM
+        </td>
+        <td class="title">
+            High Tea
+        </td>
+    </tr>
+    <tr>
+        <td class="abstract"></td>
+    </tr>
+</table>
+
+<table>
+    <tr>
+        <td class="date" rowspan="2">
+            11:30 AM - 12:30 PM
+        </td>
+        <td class="title">
+            DL for Vehicular Network
+        </td>
+    </tr>
+    <tr>
+        <td class="abstract"></td>
+    </tr>
+</table>
+
+<table>
+    <tr>
+        <td class="date" rowspan="2">
+            12:30 - 1:30 PM
+        </td>
+        <td class="title">
+            DL for Cyber Security
+        </td>
+    </tr>
+    <tr>
+        <td class="abstract"></td>
+    </tr>
+</table>
+
+<table>
+    <tr>
+        <td class="date" rowspan="2">
+            1:30 - 3:00 PM
+        </td>
+        <td class="title">
+            Lunch
+        </td>
+    </tr>
+    <tr>
+        <td class="abstract"></td>
+    </tr>
+</table>
+
+<table>
+    <tr>
+        <td class="date" rowspan="2">
+            3:00 - 5:00 PM
+        </td>
+        <td class="title">
+            Hands-on
+        </td>
+    </tr>
+    <tr>
+        <td class="abstract"></td>
+    </tr>
+</table>
+
+<!-- 13th January (Monday) -->
+
+<div class="ScheduleBanner">
+    <h4>13th January (Monday), 2025</h4>
+</div>
+
+<table>
+    <tr>
+        <td class="date" rowspan="2">
+            9:00 - 10:00 AM
+        </td>
+        <td class="title">
+            Expert Lecture
+        </td>
+    </tr>
+    <tr>
+        <td class="abstract"></td>
+    </tr>
+</table>
+
+<table>
+    <tr>
+        <td class="date" rowspan="2">
+            10:00 - 11:00 AM
+        </td>
+        <td class="title">
+            Explainable AI
+        </td>
+    </tr>
+    <tr>
+        <td class="abstract"></td>
+    </tr>
+</table>
+
+<table>
+    <tr>
+        <td class="date" rowspan="2">
+            11:00 - 11:30 AM
+        </td>
+        <td class="title">
+            High Tea
+        </td>
+    </tr>
+    <tr>
+        <td class="abstract"></td>
+    </tr>
+</table>
+
+<table>
+    <tr>
+        <td class="date" rowspan="2">
+            11:30 AM - 12:30 PM
+        </td>
+        <td class="title">
+            Fairness in AI
+        </td>
+    </tr>
+    <tr>
+        <td class="abstract"></td>
+    </tr>
+</table>
+
+<table>
+    <tr>
+        <td class="date" rowspan="2">
+            12:30 - 1:30 PM
+        </td>
+        <td class="title">
+            DL Applications
+        </td>
+    </tr>
+    <tr>
+        <td class="abstract"></td>
+    </tr>
+</table>
+
+<table>
+    <tr>
+        <td class="date" rowspan="2">
+            1:30 - 3:00 PM
+        </td>
+        <td class="title">
+            Lunch
+        </td>
+    </tr>
+    <tr>
+        <td class="abstract"></td>
+    </tr>
+</table>
+
+<table>
+    <tr>
+        <td class="date" rowspan="2">
+            3:00 - 5:00 PM
+        </td>
+        <td class="title">
+            Valedictory
+        </td>
+    </tr>
+    <tr>
+        <td class="abstract"></td>
+    </tr>
+</table>
 
                 </div>
             </div>
