--- a/index.html
+++ b/index.html
@@ -12346,101 +12346,13 @@ td {
 </div>
 
 <table>
-    <tr>
-        <td class="date" rowspan="2">
-            9:00 - 10:00 AM
-        </td>
-        <td class="title">
-            Expert Lecture
-        </td>
-    </tr>
-    <tr>
-        <td class="abstract"></td>
-    </tr>
-</table>
-
-<table>
-    <tr>
-        <td class="date" rowspan="2">
-            10:00 - 11:00 AM
-        </td>
-        <td class="title">
-            Inauguration
-        </td>
-    </tr>
-    <tr>
-        <td class="abstract"></td>
-    </tr>
-</table>
-
-<table>
-    <tr>
-        <td class="date" rowspan="2">
-            11:00 - 11:30 AM
-        </td>
-        <td class="title">
-            High Tea
-        </td>
-    </tr>
-    <tr>
-        <td class="abstract"></td>
-    </tr>
-</table>
-
-<table>
-    <tr>
-        <td class="date" rowspan="2">
-            11:30 AM - 12:30 PM
-        </td>
-        <td class="title">
-            ML Basics
-        </td>
-    </tr>
-    <tr>
-        <td class="abstract"></td>
-    </tr>
-</table>
-
-<table>
-    <tr>
-        <td class="date" rowspan="2">
-            12:30 - 1:30 PM
-        </td>
-        <td class="title">
-            ML Basics
-        </td>
-    </tr>
-    <tr>
-        <td class="abstract"></td>
-    </tr>
-</table>
-
-<table>
-    <tr>
-        <td class="date" rowspan="2">
-            1:30 - 3:00 PM
-        </td>
-        <td class="title">
-            Lunch
-        </td>
-    </tr>
-    <tr>
-        <td class="abstract"></td>
-    </tr>
-</table>
-
-<table>
-    <tr>
-        <td class="date" rowspan="2">
-            3:00 - 5:00 PM
-        </td>
-        <td class="title">
-            Hands-on
-        </td>
-    </tr>
-    <tr>
-        <td class="abstract"></td>
-    </tr>
+    <tr><td class="date"">9:00 - 10:00 AM</td><td class="title">Expert Lecture</td></tr>
+    <tr><td class="date">10:00 - 11:00 AM</td><td class="title">Inauguration</td></tr>
+    <tr><td class="date">11:00 - 11:30 AM</td><td class="title">High Tea</td></tr>
+    <tr><td class="date">11:30 AM - 12:30 PM</td><td class="title">ML Basics</td></tr>
+    <tr><td class="date">12:30 - 1:30 PM</td><td class="title">ML Basics</td></tr>
+    <tr><td class="date">1:30 - 3:00 PM</td><td class="title">Lunch</td></tr>
+    <tr><td class="date">3:00 - 5:00 PM</td><td class="title">Hands-on</td></tr>
 </table>
 
 <!-- Repeat the same structure for 7th, 8th, 9th, 10th, 11th, 12th, and 13th January -->
