--- a/index.html
+++ b/index.html
@@ -12347,26 +12347,26 @@ td {
     <h4>6th January (Monday), 2025</h4>
 </div>
 <table>
-    <tr><td class="date"">9:00 - 10:00 AM</td><td class="title">Expert Lecture</td></tr>    <tr><td class="abstract"></td><td class="abstract"></td></tr>
-    <tr><td class="date">10:00 - 11:00 AM</td><td class="title">Inauguration</td></tr>    <tr><td class="abstract"></td><td class="abstract"></td></tr>
-    <tr><td class="date">11:00 - 11:30 AM</td><td class="title">High Tea</td></tr>        <tr><td class="abstract"></td><td class="abstract"></td></tr>
-    <tr><td class="date">11:30 AM - 12:30 PM</td><td class="title">ML Basics</td></tr>    <tr><td class="abstract"></td><td class="abstract"></td></tr>
-    <tr><td class="date">12:30 - 1:30 PM</td><td class="title">ML Basics</td></tr>        <tr><td class="abstract"></td><td class="abstract"></td></tr>
-    <tr><td class="date">1:30 - 3:00 PM</td><td class="title">Lunch</td></tr>            <tr><td class="abstract"></td><td class="abstract"></td></tr>
-    <tr><td class="date">3:00 - 5:00 PM</td><td class="title">Hands-on</td></tr>           <tr><td class="abstract"></td><td class="abstract"></td></tr>
+    <tr><td class="date"">9:00 - 10:00 AM</td><td >Expert Lecture</td></tr>    <tr><td class="abstract"></td><td class="abstract"></td></tr>
+    <tr><td class="date">10:00 - 11:00 AM</td><td >Inauguration</td></tr>    <tr><td class="abstract"></td><td class="abstract"></td></tr>
+    <tr><td class="date">11:00 - 11:30 AM</td><td >High Tea</td></tr>        <tr><td class="abstract"></td><td class="abstract"></td></tr>
+    <tr><td class="date">11:30 AM - 12:30 PM</td><td >ML Basics</td></tr>    <tr><td class="abstract"></td><td class="abstract"></td></tr>
+    <tr><td class="date">12:30 - 1:30 PM</td><td >ML Basics</td></tr>        <tr><td class="abstract"></td><td class="abstract"></td></tr>
+    <tr><td class="date">1:30 - 3:00 PM</td><td >Lunch</td></tr>            <tr><td class="abstract"></td><td class="abstract"></td></tr>
+    <tr><td class="date">3:00 - 5:00 PM</td><td >Hands-on</td></tr>           <tr><td class="abstract"></td><td class="abstract"></td></tr>
 </table>
 
 <div class="ScheduleBanner">
     <h4>7th January (Tuesday), 2025</h4>
 </div>
 <table>
-    <tr><td class="date">9:00 - 10:00 AM</td><td class="title">Expert Lecture</td></tr>         <tr><td class="abstract"></td><td class="abstract"></td></tr>
-    <tr><td class="date">10:00 - 11:00 AM</td><td class="title">DL Basics</td></tr>            <tr><td class="abstract"></td><td class="abstract"></td></tr>
-    <tr><td class="date">11:00 - 11:30 AM</td><td class="title">High Tea</td></tr>            <tr><td class="abstract"></td><td class="abstract"></td></tr>
-    <tr><td class="date">11:30 AM - 12:30 PM</td><td class="title">CNN - I</td></tr>            <tr><td class="abstract"></td><td class="abstract"></td></tr>
-    <tr><td class="date">12:30 - 1:30 PM</td><td class="title">CNN - II</td></tr>    <tr><td class="abstract"></td><td class="abstract"></td></tr>
-    <tr><td class="date">1:30 - 3:00 PM</td><td class="title">Lunch</td></tr>        <tr><td class="abstract"></td><td class="abstract"></td></tr>
-    <tr><td class="date">3:00 - 5:00 PM</td><td class="title">Hands-on</td></tr>               <tr><td class="abstract"></td><td class="abstract"></td></tr>
+    <tr><td class="date">9:00 - 10:00 AM</td><td >Expert Lecture</td></tr>         <tr><td class="abstract"></td><td class="abstract"></td></tr>
+    <tr><td class="date">10:00 - 11:00 AM</td><td >DL Basics</td></tr>            <tr><td class="abstract"></td><td class="abstract"></td></tr>
+    <tr><td class="date">11:00 - 11:30 AM</td><td >High Tea</td></tr>            <tr><td class="abstract"></td><td class="abstract"></td></tr>
+    <tr><td class="date">11:30 AM - 12:30 PM</td><td >CNN - I</td></tr>            <tr><td class="abstract"></td><td class="abstract"></td></tr>
+    <tr><td class="date">12:30 - 1:30 PM</td><td >CNN - II</td></tr>    <tr><td class="abstract"></td><td class="abstract"></td></tr>
+    <tr><td class="date">1:30 - 3:00 PM</td><td >Lunch</td></tr>        <tr><td class="abstract"></td><td class="abstract"></td></tr>
+    <tr><td class="date">3:00 - 5:00 PM</td><td >Hands-on</td></tr>               <tr><td class="abstract"></td><td class="abstract"></td></tr>
 </table>
 
 
@@ -12376,13 +12376,13 @@ td {
 
 <table>
 
-    <tr><td class="date">9:00 - 10:00 AM</td><td class="title">Expert Lecture</td></tr>         <tr><td class="abstract"></td><td class="abstract"></td></tr>
-    <tr><td class="date">10:00 - 11:00 AM</td><td class="title">Sequential Modelling - I</td></tr>            <tr><td class="abstract"></td><td class="abstract"></td></tr>
-    <tr><td class="date">11:00 - 11:30 AM</td><td class="title">High Tea</td></tr>        <tr><td class="abstract"></td><td class="abstract"></td></tr>
-    <tr><td class="date">11:30 AM - 12:30 PM</td><td class="title">Sequential Modelling - II</td></tr>            <tr><td class="abstract"></td><td class="abstract"></td></tr>
-    <tr><td class="date">12:30 - 1:30 PM</td><td class="title">Sequential Modelling - III</td></tr>    <tr><td class="abstract"></td><td class="abstract"></td></tr>
-    <tr><td class="date">1:30 - 3:00 PM</td><td class="title">Lunch</td></tr>            <tr><td class="abstract"></td><td class="abstract"></td></tr>
-    <tr><td class="date">3:00 - 5:00 PM</td><td class="title">Hands-on</td></tr>               <tr><td class="abstract"></td><td class="abstract"></td></tr>
+    <tr><td class="date">9:00 - 10:00 AM</td><td >Expert Lecture</td></tr>         <tr><td class="abstract"></td><td class="abstract"></td></tr>
+    <tr><td class="date">10:00 - 11:00 AM</td><td >Sequential Modelling - I</td></tr>            <tr><td class="abstract"></td><td class="abstract"></td></tr>
+    <tr><td class="date">11:00 - 11:30 AM</td><td >High Tea</td></tr>        <tr><td class="abstract"></td><td class="abstract"></td></tr>
+    <tr><td class="date">11:30 AM - 12:30 PM</td><td >Sequential Modelling - II</td></tr>            <tr><td class="abstract"></td><td class="abstract"></td></tr>
+    <tr><td class="date">12:30 - 1:30 PM</td><td >Sequential Modelling - III</td></tr>    <tr><td class="abstract"></td><td class="abstract"></td></tr>
+    <tr><td class="date">1:30 - 3:00 PM</td><td >Lunch</td></tr>            <tr><td class="abstract"></td><td class="abstract"></td></tr>
+    <tr><td class="date">3:00 - 5:00 PM</td><td >Hands-on</td></tr>               <tr><td class="abstract"></td><td class="abstract"></td></tr>
 </table>
 
 <!-- Repeat this structure for all other days (9th to 13th January) -->
@@ -12393,13 +12393,13 @@ td {
 </div>
 
 <table>
-    <tr><td class="date">9:00 - 10:00 AM</td><td class="title">Expert Lecture</td></tr>         <tr><td class="abstract"></td><td class="abstract"></td></tr>
-    <tr><td class="date">10:00 - 11:00 AM</td><td class="title">DL for Vision - I</td></tr>    <tr><td class="abstract"></td><td class="abstract"></td></tr>
-    <tr><td class="date">11:00 - 11:30 AM</td><td class="title">High Tea</td></tr>                <tr><td class="abstract"></td><td class="abstract"></td></tr>
-    <tr><td class="date">11:30 AM - 12:30 PM</td><td class="title">DL for Vision - II</td></tr>    <tr><td class="abstract"></td><td class="abstract"></td></tr> 
-    <tr><td class="date">12:30 - 1:30 PM</td><td class="title">DL for Vision - III</td></tr>    <tr><td class="abstract"></td><td class="abstract"></td></tr>                                                                                                                                                    
-    <tr><td class="date">1:30 - 3:00 PM</td><td class="title">Lunch</td></tr>            <tr><td class="abstract"></td><td class="abstract"></td></tr>
-    <tr><td class="date">3:00 - 5:00 PM</td><td class="title">Hands-on</td></tr>               <tr><td class="abstract"></td><td class="abstract"></td></tr>
+    <tr><td class="date">9:00 - 10:00 AM</td><td >Expert Lecture</td></tr>         <tr><td class="abstract"></td><td class="abstract"></td></tr>
+    <tr><td class="date">10:00 - 11:00 AM</td><td >DL for Vision - I</td></tr>    <tr><td class="abstract"></td><td class="abstract"></td></tr>
+    <tr><td class="date">11:00 - 11:30 AM</td><td >High Tea</td></tr>                <tr><td class="abstract"></td><td class="abstract"></td></tr>
+    <tr><td class="date">11:30 AM - 12:30 PM</td><td >DL for Vision - II</td></tr>    <tr><td class="abstract"></td><td class="abstract"></td></tr> 
+    <tr><td class="date">12:30 - 1:30 PM</td><td >DL for Vision - III</td></tr>    <tr><td class="abstract"></td><td class="abstract"></td></tr>                                                                                                                                                    
+    <tr><td class="date">1:30 - 3:00 PM</td><td >Lunch</td></tr>            <tr><td class="abstract"></td><td class="abstract"></td></tr>
+    <tr><td class="date">3:00 - 5:00 PM</td><td >Hands-on</td></tr>               <tr><td class="abstract"></td><td class="abstract"></td></tr>
 </table>
 
 <!-- 10th January (Friday) -->
@@ -12409,13 +12409,13 @@ td {
 </div>
 
 <table>
-    <tr><td class="date">9:00 - 10:00 AM</td><td class="title">Expert Lecture</td></tr>         <tr><td class="abstract"></td><td class="abstract"></td></tr>
-    <tr><td class="date">10:00 - 11:00 AM</td><td class="title">DL for NLP - I</td></tr>        <tr><td class="abstract"></td><td class="abstract"></td></tr>
-    <tr><td class="date">11:00 - 11:30 AM</td><td class="title">High Tea</td></tr>            <tr><td class="abstract"></td><td class="abstract"></td></tr>
-    <tr><td class="date">11:30 AM - 12:30 PM</td><td class="title">DL for NLP - II</td></tr>    <tr><td class="abstract"></td><td class="abstract"></td></tr>
-    <tr><td class="date">12:30 - 1:30 PM</td><td class="title">DL for NLP - III</td></tr>        <tr><td class="abstract"></td><td class="abstract"></td></tr>
-    <tr><td class="date">1:30 - 3:00 PM</td><td class="title">Lunch</td></tr>            <tr><td class="abstract"></td><td class="abstract"></td></tr>
-    <tr><td class="date">3:00 - 5:00 PM</td><td class="title">Hands-on</td></tr>               <tr><td class="abstract"></td><td class="abstract"></td></tr>
+    <tr><td class="date">9:00 - 10:00 AM</td><td >Expert Lecture</td></tr>         <tr><td class="abstract"></td><td class="abstract"></td></tr>
+    <tr><td class="date">10:00 - 11:00 AM</td><td >DL for NLP - I</td></tr>        <tr><td class="abstract"></td><td class="abstract"></td></tr>
+    <tr><td class="date">11:00 - 11:30 AM</td><td >High Tea</td></tr>            <tr><td class="abstract"></td><td class="abstract"></td></tr>
+    <tr><td class="date">11:30 AM - 12:30 PM</td><td >DL for NLP - II</td></tr>    <tr><td class="abstract"></td><td class="abstract"></td></tr>
+    <tr><td class="date">12:30 - 1:30 PM</td><td >DL for NLP - III</td></tr>        <tr><td class="abstract"></td><td class="abstract"></td></tr>
+    <tr><td class="date">1:30 - 3:00 PM</td><td >Lunch</td></tr>            <tr><td class="abstract"></td><td class="abstract"></td></tr>
+    <tr><td class="date">3:00 - 5:00 PM</td><td >Hands-on</td></tr>               <tr><td class="abstract"></td><td class="abstract"></td></tr>
 </table>
 
 <!-- 11th January (Saturday) -->
@@ -12425,13 +12425,13 @@ td {
 </div>
 
 <table>
-    <tr><td class="date">9:00 - 10:00 AM</td><td class="title">Expert Lecture</td></tr>             <tr><td class="abstract"></td><td class="abstract"></td></tr>
-    <tr><td class="date">10:00 - 11:00 AM</td><td class="title">Generative AI - I</td></tr>        <tr><td class="abstract"></td><td class="abstract"></td></tr>
-    <tr><td class="date">11:00 - 11:30 AM</td><td class="title">High Tea</td></tr>                <tr><td class="abstract"></td><td class="abstract"></td></tr>
-    <tr><td class="date">11:30 AM - 12:30 PM</td><td class="title">Generative AI - II</td></tr>    <tr><td class="abstract"></td><td class="abstract"></td></tr>
-    <tr><td class="date">12:30 - 1:30 PM</td><td class="title">Generative AI - III</td></tr>        <tr><td class="abstract"></td><td class="abstract"></td></tr>
-    <tr><td class="date">1:30 - 3:00 PM</td><td class="title">Lunch</td></tr>            <tr><td class="abstract"></td><td class="abstract"></td></tr>
-    <tr><td class="date">3:00 - 5:00 PM</td><td class="title">Hands-on</td></tr>               <tr><td class="abstract"></td><td class="abstract"></td></tr>
+    <tr><td class="date">9:00 - 10:00 AM</td><td >Expert Lecture</td></tr>             <tr><td class="abstract"></td><td class="abstract"></td></tr>
+    <tr><td class="date">10:00 - 11:00 AM</td><td >Generative AI - I</td></tr>        <tr><td class="abstract"></td><td class="abstract"></td></tr>
+    <tr><td class="date">11:00 - 11:30 AM</td><td >High Tea</td></tr>                <tr><td class="abstract"></td><td class="abstract"></td></tr>
+    <tr><td class="date">11:30 AM - 12:30 PM</td><td >Generative AI - II</td></tr>    <tr><td class="abstract"></td><td class="abstract"></td></tr>
+    <tr><td class="date">12:30 - 1:30 PM</td><td >Generative AI - III</td></tr>        <tr><td class="abstract"></td><td class="abstract"></td></tr>
+    <tr><td class="date">1:30 - 3:00 PM</td><td >Lunch</td></tr>            <tr><td class="abstract"></td><td class="abstract"></td></tr>
+    <tr><td class="date">3:00 - 5:00 PM</td><td >Hands-on</td></tr>               <tr><td class="abstract"></td><td class="abstract"></td></tr>
 </table>
 
 <!-- 12th January (Sunday) -->
@@ -12441,13 +12441,13 @@ td {
 </div>
 
 <table>
-    <tr><td class="date">9:00 - 10:00 AM</td><td class="title">Expert Lecture</td></tr>                     <tr><td class="abstract"></td><td class="abstract"></td></tr>
-    <tr><td class="date">10:00 - 11:00 AM</td><td class="title">DL for Network</td></tr>                    <tr><td class="abstract"></td><td class="abstract"></td></tr>
-    <tr><td class="date">11:00 - 11:30 AM</td><td class="title">High Tea</td></tr>                        <tr><td class="abstract"></td><td class="abstract"></td></tr>
-    <tr><td class="date">11:30 AM - 12:30 PM</td><td class="title">DL for Vehicular Network</td></tr>    <tr><td class="abstract"></td><td class="abstract"></td></tr>
-    <tr><td class="date">12:30 - 1:30 PM</td><td class="title">DL for Cyber Security</td></tr>            <tr><td class="abstract"></td><td class="abstract"></td></tr>
-    <tr><td class="date">1:30 - 3:00 PM</td><td class="title">Lunch</td></tr>                                <tr><td class="abstract"></td><td class="abstract"></td></tr>
-    <tr><td class="date">3:00 - 5:00 PM</td><td class="title">Hands-on</td></tr>                           <tr><td class="abstract"></td><td class="abstract"></td></tr>
+    <tr><td class="date">9:00 - 10:00 AM</td><td >Expert Lecture</td></tr>                     <tr><td class="abstract"></td><td class="abstract"></td></tr>
+    <tr><td class="date">10:00 - 11:00 AM</td><td >DL for Network</td></tr>                    <tr><td class="abstract"></td><td class="abstract"></td></tr>
+    <tr><td class="date">11:00 - 11:30 AM</td><td >High Tea</td></tr>                        <tr><td class="abstract"></td><td class="abstract"></td></tr>
+    <tr><td class="date">11:30 AM - 12:30 PM</td><td >DL for Vehicular Network</td></tr>    <tr><td class="abstract"></td><td class="abstract"></td></tr>
+    <tr><td class="date">12:30 - 1:30 PM</td><td >DL for Cyber Security</td></tr>            <tr><td class="abstract"></td><td class="abstract"></td></tr>
+    <tr><td class="date">1:30 - 3:00 PM</td><td >Lunch</td></tr>                                <tr><td class="abstract"></td><td class="abstract"></td></tr>
+    <tr><td class="date">3:00 - 5:00 PM</td><td >Hands-on</td></tr>                           <tr><td class="abstract"></td><td class="abstract"></td></tr>
 </table>
 
 <!-- 13th January (Monday) -->
@@ -12457,19 +12457,20 @@ td {
 </div>
 
 <table>
-    <tr><td class="date">9:00 - 10:00 AM</td><td class="title">Expert Lecture</td></tr>         <tr><td class="abstract"></td><td class="abstract"></td></tr>
-    <tr><td class="date">10:00 - 11:00 AM</td><td class="title">Explainable AI</td></tr>        <tr><td class="abstract"></td><td class="abstract"></td></tr>
-    <tr><td class="date">11:00 - 11:30 AM</td><td class="title">High Tea</td></tr>                <tr><td class="abstract"></td><td class="abstract"></td></tr>
-    <tr><td class="date">11:30 AM - 12:30 PM</td><td class="title">Fairness in AI</td></tr><tr>    <td class="abstract"></td><td class="abstract"></td></tr>
-    <tr><td class="date">12:30 - 1:30 PM</td><td class="title">DL Applications</td></tr>            <tr><td class="abstract"></td><td class="abstract"></td></tr>
-    <tr><td class="date">1:30 - 3:00 PM</td><td class="title">Lunch</td></tr>            <tr><td class="abstract"></td><td class="abstract"></td></tr>    
-    <tr><td class="date">3:00 - 5:00 PM</td><td class="title">Valedictory</td></tr>               <tr><td class="abstract"></td><td class="abstract"></td></tr>
+    <tr><td class="date">9:00 - 10:00 AM</td><td >Expert Lecture</td></tr>         <tr><td class="abstract"></td><td class="abstract"></td></tr>
+    <tr><td class="date">10:00 - 11:00 AM</td><td >Explainable AI</td></tr>        <tr><td class="abstract"></td><td class="abstract"></td></tr>
+    <tr><td class="date">11:00 - 11:30 AM</td><td >High Tea</td></tr>                <tr><td class="abstract"></td><td class="abstract"></td></tr>
+    <tr><td class="date">11:30 AM - 12:30 PM</td><td >Fairness in AI</td></tr><tr>    <td class="abstract"></td><td class="abstract"></td></tr>
+    <tr><td class="date">12:30 - 1:30 PM</td><td >DL Applications</td></tr>            <tr><td class="abstract"></td><td class="abstract"></td></tr>
+    <tr><td class="date">1:30 - 3:00 PM</td><td >Lunch</td></tr>            <tr><td class="abstract"></td><td class="abstract"></td></tr>    
+    <tr><td class="date">3:00 - 5:00 PM</td><td >Valedictory</td></tr>               <tr><td class="abstract"></td><td class="abstract"></td></tr>
 </table>
 
                 </div>
         </div>
         </div>
         </div>
+    <div style="height: 4rem;"></div>
 </section>
 
 <section id="accomodation" class="bg-light">
