--- a/index.html
+++ b/index.html
@@ -12313,24 +12313,35 @@ td {
             
     <section class="page-section bg-light" id="register">
         <div class="container">
-            <div class="team-grid">
-                <div class="intro">
+        <div class="team-grid KeyNotesContainer">
+        <div class="intro flex flex-col align-middle text-center">
                     <h2 class="text-center-asli-wala">Registration</h2>
                     <div class="text-center">
                         <div class="text-justify">
                               <p class="text-muted">
-                                  Add here...
+                                    <h3>Fee details</h3>
+                                          <ul>
+                                              <li><b>Participants (online/offline):</b> 2,000 INR</li>
+                                              <li><b>Foreign/Industry Participants:</b> 10,000 INR</li>
+                                          </ul>
+                                    <h3>Bank Details</h3>
+                                            <li><b>Beneficiary Name:</b> IITG TIDF</li>
+                                            <li><b>Bank Name:</b> Canara Bank</li>
+                                            <li><b>Branch Name:</b> IIT Guwahati</li>
+                                            <li><b>IFSC Code:</b> CNRB0008652</li>
+                                            <li><b> Account Number:</b> 8652101030401</li>
                               </p>
                         </div>
                     </div>
-                </div>
-            </div>
-            <div class="text-center-asli-wala">
-                <iframe
-                    src="https://docs.google.com/forms/d/e/1FAIpQLSc0PHj-P0A862KM_UToWvjgYTterCzAaM4ByFZSOurt2jyRBg/viewform?embedded=true"
-                    width="550" height="550" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
-
-            </div>
+                            <div class="text-center-asli-wala">
+                                Please make the payment via details given above and fill up the form
+                                <iframe
+                                    src="https://forms.gle/Jne3KHLudcp6sShj7"
+                                    width="550" height="550" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+                            </div>
+        </div>
+        </div>
+            <div style="height: 4rem;"></div>
         </div>
     </section>
 
