--- a/index.html
+++ b/index.html
@@ -12316,15 +12316,15 @@ td {
         <div class="team-grid KeyNotesContainer">
         <div class="intro flex flex-col align-middle text-center">
                     <h2 class="text-center-asli-wala">Registration</h2>
-                    <div class="text-center">
+                    <div class="text-center-asli-wala">
                         <div class="text-justify">
                               <p class="text-muted">
-                                    <h3>Fee details</h3>
+                                    <h4>Fee details</h4>
                                           <ul>
                                               <li><b>Participants (online/offline):</b> 2,000 INR</li>
                                               <li><b>Foreign/Industry Participants:</b> 10,000 INR</li>
                                           </ul>
-                                    <h3>Bank Details</h3>
+                                    <h4>Bank Details</h4>
                                             <li><b>Beneficiary Name:</b> IITG TIDF</li>
                                             <li><b>Bank Name:</b> Canara Bank</li>
                                             <li><b>Branch Name:</b> IIT Guwahati</li>
@@ -12334,9 +12334,9 @@ td {
                         </div>
                     </div>
                             <div class="text-center-asli-wala">
-                                Please make the payment via details given above and fill up the form
+                                Please make the payment via the details given above and fill up the form
                                 <iframe
-                                    src="https://forms.gle/Jne3KHLudcp6sShj7"
+                                    src="https://forms.gle/Jne3KHLudcp6sShj7/preview?usp=drivesdk"
                                     width="550" height="550" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
                             </div>
         </div>
