--- a/index.html
+++ b/index.html
@@ -12335,9 +12335,10 @@ td {
                     </div>
                             <div class="text-center-asli-wala">
                                 Please make the payment via the details given above and fill up the form
-                                <iframe
+                                <!--<iframe
                                     src="https://forms.gle/Jne3KHLudcp6sShj7/preview?usp=drivesdk"
-                                    width="550" height="550" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+                                    width="550" height="550" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>-->
+                                <img src=""></img>
                             </div>
         </div>
         </div>
