--- a/index.html
+++ b/index.html
@@ -12320,21 +12320,19 @@ td {
                         <div class="text-justify">
                               <p class="text-muted">
                                     <h4>Fee details</h4>
-                                          <ul>
-                                              <li><b>Participants (online/offline):</b> 2,000 INR</li>
-                                              <li><b>Foreign/Industry Participants:</b> 10,000 INR</li>
-                                          </ul>
+                                              <b>Participants (online/offline):</b> 2,000 INR <br>
+                                              <b>Foreign/Industry Participants:</b> 10,000 INR <br>
                                     <h4>Bank Details</h4>
-                                            <li><b>Beneficiary Name:</b> IITG TIDF</li>
-                                            <li><b>Bank Name:</b> Canara Bank</li>
-                                            <li><b>Branch Name:</b> IIT Guwahati</li>
-                                            <li><b>IFSC Code:</b> CNRB0008652</li>
-                                            <li><b> Account Number:</b> 8652101030401</li>
+                                            <b>Beneficiary Name:</b> IITG TIDF
+                                            <b>Bank Name:</b> Canara Bank
+                                            <b>Branch Name:</b> IIT Guwahati
+                                            <b>IFSC Code:</b> CNRB0008652
+                                            <b> Account Number:</b> 8652101030401
                               </p>
                         </div>
                     </div>
                             <div class="text-center-asli-wala">
-                                Please make the payment via the details given above and fill up the form
+                                Please make the payment via the details given above and fill up the form<br>
                                 <!--<iframe
                                     src="https://forms.gle/Jne3KHLudcp6sShj7/preview?usp=drivesdk"
                                     width="550" height="550" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>-->
