--- a/index.html
+++ b/index.html
@@ -12336,7 +12336,7 @@ td {
                                 <!--<iframe
                                     src="https://forms.gle/Jne3KHLudcp6sShj7/preview?usp=drivesdk"
                                     width="550" height="550" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>-->
-                                <a href='https://forms.gle/Jne3KHLudcp6sShj7/preview?usp=drivesdk'></a><img src="assets/img/team/Participant Details form QR.png"></img><a></a>
+                                <a href='https://forms.gle/Jne3KHLudcp6sShj7/preview?usp=drivesdk'></a><img src="assets/img/team/Participant Details form QR.png" width="100"></img><a></a>
                             </div>
         </div>
         </div>
