--- a/index.html
+++ b/index.html
@@ -1774,7 +1774,7 @@ progress {
   --bs-table-active-bg: rgba(0, 0, 0, 0.1);
   --bs-table-hover-color: var(--bs-body-color);
   --bs-table-hover-bg: rgba(0, 0, 0, 0.075);
-  width: 100%;
+/*   width: 100%; */
   margin-bottom: 1rem;
   color: var(--bs-table-color);
   vertical-align: top;
