--- a/index.html
+++ b/index.html
@@ -11744,13 +11744,13 @@ td {
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
         <div class="container">
-            <!-- <a class="navbar-brand" href="#page-top"><img src="assets/img/Minimalist Logo.jpg" alt="..."/></a> -->
+            <!-- <a class="navbar-brand" href="#page-top"><img src="assets/img/Minimalist Logo.jpg" alt="..."/></a>
             <a class="navbar-brand" href="#"><img class="delhiMarkup" src="Cailogo_update_1.png"><img /></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive"
                 aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                 Menu
                 <i class="fas fa-bars ms-1"></i>
-            </button>
+            </button> -->
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
 
@@ -12313,10 +12313,6 @@ td {
             
     <section class="page-section bg-light" id="register">
         <div class="container">
-                        <table>
-                            <tr><th>Participants (online/offline):</th><td>2,000 INR</td></tr>
-                            <tr><th>Foreign/Industry Participants:</th><td>10,000 INR</td></tr>
-                        </table>
         <div class="team-grid KeyNotesContainer">
         <div class="intro flex flex-col align-middle text-center">
                     <h2 class="text-center-asli-wala">Registration</h2>
