--- a/index.html
+++ b/index.html
@@ -12353,90 +12353,82 @@ td {
             <div style="display: none;" id="responsiveTable">
   <table border="1" style="border-collapse: collapse; text-align: center; width: 100%;">
     <tr>
-      <th>Time</th>
+      <th></th>
       <th>9:00 - 10:00 AM</th>
       <th>10:00 - 11:00 AM</th>
-      <th style="writing-mode: vertical-rl; transform: rotate(180deg);">11:00 - 11:30 AM (High Tea)</th>
+      <th style="writing-mode: vertical-rl; transform: rotate(180deg);" rowspan="9">11:00 - 11:30 AM (High Tea)</th>
       <th>11:30 AM - 12:30 PM</th>
       <th>12:30 - 1:30 PM</th>
       <th style="writing-mode: vertical-rl; transform: rotate(180deg);">1:30 - 3:00 PM (Lunch)</th>
       <th>3:00 - 5:00 PM</th>
     </tr>
     <tr style="border-bottom: 1px solid black;">
-      <td><b>6th January (Monday)</b></td>
+      <td><b>6th January<br>(Monday)</b></td>
       <td>Expert Lecture</td>
-      <td style="background-color: lightgreen; font-weight: bold;">Inauguration</td>
-      <td></td>
+      <td style="font-color: lightgreen; font-weight: bold;">Inauguration</td>
       <td>ML Basics</td>
       <td>ML Basics</td>
       <td></td>
       <td>Hands-on</td>
     </tr>
     <tr style="border-bottom: 1px solid black;">
-      <td><b>7th January (Tuesday)</b></td>
+      <td><b>7th January<br>(Tuesday)</b></td>
       <td>Expert Lecture</td>
       <td>DL Basics</td>
-      <td></td>
       <td>CNN - I</td>
       <td>CNN - II</td>
       <td></td>
       <td>Hands-on</td>
     </tr>
     <tr style="border-bottom: 1px solid black;">
-      <td><b>8th January (Wednesday)</b></td>
+      <td><b>8th January<br>(Wednesday)</b></td>
       <td>Expert Lecture</td>
       <td>Sequential Modelling - I</td>
-      <td></td>
       <td>Sequential Modelling - II</td>
       <td>Sequential Modelling - III</td>
       <td></td>
       <td>Hands-on</td>
     </tr>
     <tr style="border-bottom: 1px solid black;">
-      <td><b>9th January (Thursday)</b></td>
+      <td><b>9th January<br>(Thursday)</b></td>
       <td>Expert Lecture</td>
       <td>DL for Vision - I</td>
-      <td></td>
       <td>DL for Vision - II</td>
       <td>DL for Vision - III</td>
       <td></td>
       <td>Hands-on</td>
     </tr>
     <tr style="border-bottom: 1px solid black;">
-      <td><b>10th January (Friday)</b></td>
+      <td><b>10th January<br>(Friday)</b></td>
       <td>Expert Lecture</td>
       <td>DL for NLP - I</td>
-      <td></td>
       <td>DL for NLP - II</td>
       <td>DL for NLP - III</td>
       <td></td>
       <td>Hands-on</td>
     </tr>
     <tr style="border-bottom: 1px solid black;">
-      <td><b>11th January (Saturday)</b></td>
+      <td><b>11th January<br>(Saturday)</b></td>
       <td>Expert Lecture</td>
       <td>Generative AI - I</td>
-      <td></td>
       <td>Generative AI - II</td>
       <td>Generative AI - III</td>
       <td></td>
       <td>Hands-on</td>
     </tr>
     <tr style="border-bottom: 1px solid black;">
-      <td><b>12th January (Sunday)</b></td>
+      <td><b>12th January<br>(Sunday)</b></td>
       <td>Expert Lecture</td>
       <td>DL for Network</td>
-      <td></td>
       <td>DL for Vehicular Network</td>
       <td>DL for Cyber Security</td>
       <td></td>
       <td>Hands-on</td>
     </tr>
     <tr style="border-bottom: 1px solid black;">
-      <td><b>13th January (Monday)</b></td>
+      <td><b>13th January<br>(Monday)</b></td>
       <td>Expert Lecture</td>
       <td>Explainable AI</td>
-      <td></td>
       <td>Fairness in AI</td>
       <td>DL Applications</td>
       <td></td>
