--- a/index.html
+++ b/index.html
@@ -12351,7 +12351,7 @@ td {
         <div class="team-grid KeyNotesContainer">
         <div class="intro flex flex-col align-middle text-center">
             <div style="display: none;" id="responsiveTable">
-  <table border="1" style="border-collapse: collapse; text-align: center; width: 100%;">
+  <table style="border-collapse: collapse; text-align: center; width: 100%;">
     <tr>
       <th></th>
       <th>9:00 - 10:00 AM</th>
@@ -12359,16 +12359,15 @@ td {
       <th style="writing-mode: vertical-rl; transform: rotate(180deg);" rowspan="9">11:00 - 11:30 AM (High Tea)</th>
       <th>11:30 AM - 12:30 PM</th>
       <th>12:30 - 1:30 PM</th>
-      <th style="writing-mode: vertical-rl; transform: rotate(180deg);">1:30 - 3:00 PM (Lunch)</th>
+      <th style="writing-mode: vertical-rl; transform: rotate(180deg);" rowspan="9">1:30 - 3:00 PM (Lunch)</th>
       <th>3:00 - 5:00 PM</th>
     </tr>
     <tr style="border-bottom: 1px solid black;">
       <td><b>6th January<br>(Monday)</b></td>
       <td>Expert Lecture</td>
-      <td style="font-color: lightgreen; font-weight: bold;">Inauguration</td>
+      <td style="color: lightgreen; font-weight: bold;">Inauguration</td>
       <td>ML Basics</td>
       <td>ML Basics</td>
-      <td></td>
       <td>Hands-on</td>
     </tr>
     <tr style="border-bottom: 1px solid black;">
@@ -12377,7 +12376,6 @@ td {
       <td>DL Basics</td>
       <td>CNN - I</td>
       <td>CNN - II</td>
-      <td></td>
       <td>Hands-on</td>
     </tr>
     <tr style="border-bottom: 1px solid black;">
@@ -12386,7 +12384,6 @@ td {
       <td>Sequential Modelling - I</td>
       <td>Sequential Modelling - II</td>
       <td>Sequential Modelling - III</td>
-      <td></td>
       <td>Hands-on</td>
     </tr>
     <tr style="border-bottom: 1px solid black;">
@@ -12395,7 +12392,6 @@ td {
       <td>DL for Vision - I</td>
       <td>DL for Vision - II</td>
       <td>DL for Vision - III</td>
-      <td></td>
       <td>Hands-on</td>
     </tr>
     <tr style="border-bottom: 1px solid black;">
@@ -12404,7 +12400,6 @@ td {
       <td>DL for NLP - I</td>
       <td>DL for NLP - II</td>
       <td>DL for NLP - III</td>
-      <td></td>
       <td>Hands-on</td>
     </tr>
     <tr style="border-bottom: 1px solid black;">
@@ -12413,7 +12408,6 @@ td {
       <td>Generative AI - I</td>
       <td>Generative AI - II</td>
       <td>Generative AI - III</td>
-      <td></td>
       <td>Hands-on</td>
     </tr>
     <tr style="border-bottom: 1px solid black;">
@@ -12422,7 +12416,6 @@ td {
       <td>DL for Network</td>
       <td>DL for Vehicular Network</td>
       <td>DL for Cyber Security</td>
-      <td></td>
       <td>Hands-on</td>
     </tr>
     <tr style="border-bottom: 1px solid black;">
@@ -12431,7 +12424,6 @@ td {
       <td>Explainable AI</td>
       <td>Fairness in AI</td>
       <td>DL Applications</td>
-      <td></td>
       <td style="color: orange; font-weight: bold;">Valedictory</td>
     </tr>
   </table>
