--- a/index.html
+++ b/index.html
@@ -12361,12 +12361,13 @@ td {
                   <table style="border-collapse: collapse; text-align: center; width: 100%;">
                     <tr style="border-bottom: 1px solid black;">
                       <th></th>
+                      <th style="writing-mode: vertical-rl; transform: rotate(180deg); vertical-align: middle;" rowspan="9"></th>
                       <th>9:00 AM -<br>10:00 AM</th>
                       <th>10:00 AM -<br>11:00 AM</th>
-                      <th style="writing-mode: vertical-rl; transform: rotate(180deg); vertical-align: middle;" rowspan="9">11:00 AM - 11:30 AM (High Tea)</th>
+                      <th style="writing-mode: vertical-rl; transform: rotate(180deg); vertical-align: middle;" rowspan="6">11:00 AM - 11:30 AM (High Tea)</th>
                       <th>11:30 AM -<br>12:30 PM</th>
                       <th>12:30 PM -<br>1:30 PM</th>
-                      <th style="writing-mode: vertical-rl; transform: rotate(180deg); vertical-align: middle;" rowspan="9">1:30 PM - 3:00 PM (Lunch)</th>
+                      <th style="writing-mode: vertical-rl; transform: rotate(180deg); vertical-align: middle;" rowspan="6">1:30 PM - 3:00 PM (Lunch)</th>
                       <th>3:00 PM -<br>5:00 PM</th>
                     </tr>
                     <tr style="border-bottom: 1px solid black;">
@@ -12413,8 +12414,10 @@ td {
                       <td><b>11th January<br>(Saturday)</b></td>
                       <td>Expert Lecture</td>
                       <td>Generative AI - I</td>
+                        <th style="writing-mode: vertical-rl; transform: rotate(180deg); vertical-align: middle;" rowspan="3"></th>
                       <td>Generative AI - II</td>
                       <td>Generative AI - III</td>
+                        <th style="writing-mode: vertical-rl; transform: rotate(180deg); vertical-align: middle;" rowspan="3"></th>
                       <td>Hands-on</td>
                     </tr>
                     <tr style="border-bottom: 1px solid black;">
