--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@ caption {
 }
 
 th {
-  text-align: inherit;
+  text-align: center;
   text-align: -webkit-match-parent;
 }
 
@@ -11705,7 +11705,7 @@ table {
 
 th,
 td {
-    text-align: left;
+    text-align: center;
     /* UNCOMMENT THIS FOR DEBUGGING THE ALIGNMENT */
     /*border: 1px solid black;*/
 }
