--- a/index.html
+++ b/index.html
@@ -12363,7 +12363,7 @@ td {
                       <th></th>
                       <th>9:00 AM -<br>10:00 AM</th>
                       <th>10:00 AM -<br>11:00 AM</th>
-                      <th>11:00 AM - <br>11:30 AM</th>
+                      <th style="writing-mode: vertical-rl; transform: rotate(180deg); vertical-align: middle;" rowspan="9">11:00 AM - 11:30 AM (High-Tea)</th>
                       <th>11:30 AM -<br>12:30 PM</th>
                       <th>12:30 PM -<br>1:30 PM</th>
                       <th style="writing-mode: vertical-rl; transform: rotate(180deg); vertical-align: middle;" rowspan="9">1:30 PM - 3:00 PM (Lunch)</th>
@@ -12373,7 +12373,6 @@ td {
                       <td><b>6th January<br>(Monday)</b></td>
                       <td>Expert<br>Lecture</td>
                       <td style="color: lightgreen; font-weight: bold;">Inauguration</td>
-                      <th rowspan="8">High<br>Tea</th>
                       <td>ML Basics</td>
                       <td>ML Basics</td>
                       <td>Hands-on</td>
@@ -12389,9 +12388,9 @@ td {
                     <tr style="border-bottom: 1px solid black;">
                       <td><b>8th January<br>(Wednesday)</b></td>
                       <td>Expert<br>Lecture</td>
-                      <td>Sequential Modelling - I</td>
-                      <td>Sequential Modelling - II</td>
-                      <td>Sequential Modelling - III</td>
+                      <td>Sequential<br>Modelling - I</td>
+                      <td>Sequential<br>Modelling - II</td>
+                      <td>Sequential<br>Modelling - III</td>
                       <td>Hands-on</td>
                     </tr>
                     <tr style="border-bottom: 1px solid black;">
@@ -12421,9 +12420,9 @@ td {
                     <tr style="border-bottom: 1px solid black;">
                       <td><b>12th January<br>(Sunday)</b></td>
                       <td>Expert<br>Lecture</td>
-                      <td>DL for Network</td>
-                      <td>DL for Vehicular Network</td>
-                      <td>DL for Cyber Security</td>
+                      <td>DL for<br>Network</td>
+                      <td>DL for<br>Vehicular Network</td>
+                      <td>DL for<br>Cyber Security</td>
                       <td>Hands-on</td>
                     </tr>
                     <tr>
