--- a/index.html
+++ b/index.html
@@ -12448,6 +12448,24 @@ td {
                         <div class="ScheduleBanner">
                             <h4>6th January (Monday), 2025</h4>
                         </div>
+                      <p  class="section-subheading Home text-muted" >
+                            <dl>
+                              <dt><b>9:00 - 10:00 AM</b></dt>
+                                  <dd>Expert Lecture</dd>
+                              <dt><b>10:00 - 11:00 AM</b></dt>
+                                  <dd>Inauguration</dd>
+                              <dt><b>11:00 - 11:30 AM</b></dt>
+                                  <dd>High Tea</dd>
+                              <dt><b>11:30 AM - 12:30 PM</b></dt>
+                                  <dd>ML Basics - I</dd>
+                              <dt><b>12:30 - 1:30 PM</b></dt>
+                                  <dd>ML Basics - II</dd>
+                              <dt><b>1:30 - 3:00 PM</b></dt>
+                                  <dd>Lunch</dd>
+                              <dt><b>3:00 - 5:00 PM</b></dt>
+                                  <dd>Hands-on</dd>
+                            </dl> 
+                      </p> 
                         <table>
                             <tr><td class="date"">9:00 - 10:00 AM</td><td >Expert Lecture</td></tr>    <tr><td class="abstract"></td><td class="abstract"></td></tr>
                             <tr><td class="date">10:00 - 11:00 AM</td><td >Inauguration</td></tr>    <tr><td class="abstract"></td><td class="abstract"></td></tr>
