--- a/index.html
+++ b/index.html
@@ -12449,6 +12449,13 @@ td {
                             <h4>6th January (Monday), 2025</h4>
                         </div>
                       <p  class="section-subheading Home text-muted" >
+                              <b>9:00 - 10:00 AM</b><br> Expert Lecture<br><br>
+                              <b>10:00 - 11:00 AM</b><br> Inauguration<br><br>
+                              <b>11:00 - 11:30 AM</b><br> High Tea<br><br>
+                              <b>11:30 AM - 12:30 PM</b><br> ML Basics - I<br><br>
+                              <b>12:30 - 1:30 PM</b><br> ML Basics - II<br<br>
+                              <b>1:30 - 3:00 PM</b><br> Lunch<br><br>
+                              <b>3:00 - 5:00 PM</b><br> Hands-on<br><br>
                             <dl>
                               <dt><b>9:00 - 10:00 AM</b></dt>
                                   <dd>Expert Lecture</dd>
