--- a/index.html
+++ b/index.html
@@ -12334,7 +12334,7 @@ td {
                     </div>
                     <div style="height: 4rem;"></div>
                     <div class="text-center-asli-wala">
-                        Please make the payment via the details given above and fill up the form<br>
+                        Please make the payment via the details given above and fill up the <a href='https://forms.gle/Jne3KHLudcp6sShj7' style="color: black; font-weight: bold;">form</a><br>
                         <!--<iframe
                             src="https://forms.gle/Jne3KHLudcp6sShj7/preview?usp=drivesdk"
                             width="550" height="550" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>-->
