--- a/index.html
+++ b/index.html
@@ -12338,7 +12338,7 @@ td {
                         <!--<iframe
                             src="https://forms.gle/Jne3KHLudcp6sShj7/preview?usp=drivesdk"
                             width="550" height="550" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>-->
-                        <a href='https://forms.gle/Jne3KHLudcp6sShj7'><img src="assets/img/team/Participant Details form QR.png" width="100"></img></a>
+                        <!--<a href='https://forms.gle/Jne3KHLudcp6sShj7'><img src="assets/img/team/Participant Details form QR.png" width="100"></img></a>-->
                     </div>
         </div>
         </div>
