--- a/index.html
+++ b/index.html
@@ -11735,7 +11735,12 @@ td {
     .news-feed-container {
       width: 800px;
       overflow: hidden; /* Hide overflow content */
-      position: relative;
+      
+      position: fixed; /* Fix the feed at a specific location */
+      top: 50px; /* 50px from the top */
+      left: 50%; /* Center horizontally */
+      transform: translateX(-50%); /* Offset by half its width to perfectly center */
+        
       height: 50px; /* Adjust height as needed */
       background-color: transparent; /* Background color for the feed area */
       margin: 0 auto; /* Center horizontally if needed */
