--- a/index.html
+++ b/index.html
@@ -11748,7 +11748,7 @@ td {
 
     /* Text to scroll */
     .news-text {
-      color: yellow; /* Text color */
+      color: red; /* Text color */
       white-space: nowrap; /* Prevent line breaks */
       position: absolute; /* Position absolutely for animation */
       font-size: 2em; /* Adjust font size as needed */
@@ -11814,11 +11814,6 @@ td {
         <div class="carousel-inner">
             <div class="carousel-item active">
                 <header class="masthead">
-                          <div class="news-feed-container">
-                            <div class="news-text">
-                              <b><i>Lecture videos will be made available for the registered candidates after the school</i></b>
-                            </div>
-                          </div>
                     <div class="container">
                         <div class="masthead-heading text-uppercase">
                             <span>Winter School on Deep Learning for Vision and Language Modelling</span>
@@ -12387,6 +12382,11 @@ td {
         <div class="team-grid KeyNotesContainer">
         <div class="intro flex flex-col align-middle text-center">
 
+          <div class="news-feed-container">
+            <div class="news-text">
+              <b><i>Lecture videos will be made available for the registered candidates after the school</i></b>
+            </div>
+          </div>
 
             <div class="text-center-asli-wala">
                 <h2 class="section-heading text-uppercase">Program Schedule</h2>
